--- a/.github/workflows/nv-h100.yml
+++ b/.github/workflows/nv-h100.yml
@@ -46,19 +46,19 @@ jobs:
 
       - name: Install deepspeed
         run: |
-          python3 -m pip install docutils==0.18.1 jinja2==3.0 urllib3==1.26.11 ninja
-          python3 -m pip install .[dev,1bit,autotuning]
-          python3 -c "import torch; print('torch:', torch.__version__, torch)"
-          ./bin/ds_report
+          python -m pip install docutils==0.18.1 jinja2==3.0 urllib3==1.26.11 ninja
+          python -m pip install .[dev,1bit,autotuning]
+          python -c "import torch; print('torch:', torch.__version__, torch)"
+          ds_report
 
       - name: Python environment
         run: |
-          python3 -m pip list
+          python -m pip list
 
       - name: Unit tests
         run: |
           unset TORCH_CUDA_ARCH_LIST # only jit compile for current arch
           if [[ -d ./torch-extensions ]]; then rm -rf ./torch-extensions; fi
           cd tests
-          TORCH_EXTENSIONS_DIR=./torch-extensions python3 -m pytest --forked -n 4  unit/ --torch_ver="2.0" --cuda_ver="11"
-          TORCH_EXTENSIONS_DIR=./torch-extensions python3 -m pytest --forked -m 'sequential' unit/ --torch_ver="2.0" --cuda_ver="11"
+          TORCH_EXTENSIONS_DIR=./torch-extensions python -m pytest --forked -n 4  unit/ --torch_ver="2.0" --cuda_ver="11"
+          TORCH_EXTENSIONS_DIR=./torch-extensions python -m pytest --forked -m 'sequential' unit/ --torch_ver="2.0" --cuda_ver="11"
