--- a/.github/workflows/nv-h100.yml
+++ b/.github/workflows/nv-h100.yml
@@ -25,7 +25,7 @@ jobs:
       image: nvcr.io/nvidia/pytorch:23.03-py3
       ports:
         - 80
-      options: --gpus all --shm-size='8g'
+      options: --gpus all --shm-size "8G"
 
     steps:
       - uses: actions/checkout@v3
