--- a/.github/workflows/nv-megatron.yml
+++ b/.github/workflows/nv-megatron.yml
@@ -36,9 +36,10 @@ jobs:
 
       - name: Install apex
         run: |
-          git clone https://github.com/NVIDIA/apex
+          git clone https://github.com/loadams/apex
           cd apex
-          pip install -v --disable-pip-version-check --no-cache-dir --no-build-isolation --config-settings "--build-option=--cpp_ext" --config-settings "--build-option=--cuda_ext" ./
+          git checkout loadams/update-build-deps
+          pip install -v --disable-pip-version-check --no-cache-dir --no-build-isolation --config-settings --build-option="--cpp_ext --cuda_ext" ./
 
       - name: Install deepspeed
         run: |
