--- a/.github/workflows/nv-megatron.yml
+++ b/.github/workflows/nv-megatron.yml
@@ -41,10 +41,8 @@ jobs:
 
       - name: Install apex
         run: |
-          git clone https://github.com/loadams/apex
-          cd apex
-          git checkout loadams/update-build-deps
-          pip install -v --disable-pip-version-check --no-cache-dir --no-build-isolation --config-settings "--build-option=--cpp_ext" --config-settings "--build-option=--cuda_ext" ./
+          pip install packaging
+          pip install -v --disable-pip-version-check --no-cache-dir --no-build-isolation --config-settings "--build-option=--cpp_ext" --config-settings "--build-option=--cuda_ext" git+https://github.com/NVIDIA/apex.git
 
       - name: Python environment
         run: |
