Revert "Prevent hangs in CI during parallel run compilation (#2844)"
This reverts commit 2b2be85f43de41986f02ecc76012b359c821bb24.

--- a/.github/workflows/nv-torch-latest-cpu.yml
+++ b/.github/workflows/nv-torch-latest-cpu.yml
@@ -14,7 +14,7 @@ concurrency:
 
 jobs:
   unit-tests:
-    runs-on: [self-hosted, cpu]
+    runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v3
