fix coverage report

--- a/.github/workflows/nv-inference.yml
+++ b/.github/workflows/nv-inference.yml
@@ -55,5 +55,6 @@ jobs:
 
       - name: Coverage Report
         run: |
+          cd tests
           coverage combine
           coverage report -m
