--- a/.github/workflows/nv-inference.yml
+++ b/.github/workflows/nv-inference.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Install deepspeed
         run: |
-          pip install .[dev,1bit,autotuning,inf]
+          pip install -e .[dev,1bit,autotuning,inf]
           ds_report
 
       - name: Python environment
