--- a/.github/workflows/amd-mi100.yml
+++ b/.github/workflows/amd-mi100.yml
@@ -1,5 +1,9 @@
 name: amd-mi100
 
+on:
+  schedule:
+    - cron: "0 0 * * *"
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
