Test with second workflow

--- a/.github/workflows/nv-torch19-v100.yml
+++ b/.github/workflows/nv-torch19-v100.yml
@@ -1,6 +1,10 @@
 name: nv-torch19-v100
 
 on:
+  pull_request:
+    paths-ignore:
+      - 'docs/**'
+      - 'blogs/**'
   schedule:
     - cron: "0 0 * * *"
 
@@ -55,4 +59,3 @@ jobs:
 
       - id: open-issue-on-fail
         uses: ./.github/workflows/open-issue-on-fail
-
