Switch failure to always

--- a/.github/workflows/open-issue-on-fail/action.yml
+++ b/.github/workflows/open-issue-on-fail/action.yml
@@ -4,7 +4,7 @@ runs:
   using: "composite"
   steps:
     - id: open-issue-on-fail
-      if: ${{ failure() }}
+      if: always()
       uses: JasonEtco/create-an-issue@v2
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
