--- a/.github/workflows/amd-mi200.yml
+++ b/.github/workflows/amd-mi200.yml
@@ -74,5 +74,10 @@ jobs:
           pytest $PYTEST_OPTS -n 4 --verbose unit/
           pytest $PYTEST_OPTS -m 'sequential' unit/
 
-      - id: open-issue-on-fail
-        uses: ./.github/workflows/open-issue-on-fail
+      - name: Open GitHub issue if nightly CI fails
+        if: failure()
+        uses: JasonEtco/create-an-issue@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          filename: .github/ISSUE_TEMPLATE/ci_failure_report.md
