Test with nvidia container

--- a/.github/workflows/nv-pre-compile-ops.yml
+++ b/.github/workflows/nv-pre-compile-ops.yml
@@ -1,3 +1,4 @@
+
 name: nv-pre-compile-ops
 
 on:
@@ -23,7 +24,7 @@ jobs:
   unit-tests:
     runs-on: ubuntu-22.04
     container:
-      image: pytorch/pytorch:2.4.0-cuda11.8-cudnn9-runtime
+      image: nvcr.io/nvidia/pytorch:23.09-py3
 
     steps:
         - uses: actions/checkout@v4
