Pin transformers due to nn.RMSNorm that is only included in latest transformers

--- a/.github/workflows/hpu-gaudi2.yml
+++ b/.github/workflows/hpu-gaudi2.yml
@@ -111,6 +111,7 @@ jobs:
         run: |
           git clone https://github.com/huggingface/transformers
           cd transformers
+          git checkout v4.44.1
           git rev-parse --short HEAD
           pip install .
 
