Add check to uninstall torch if it is installed

--- a/.github/workflows/no-torch.yml
+++ b/.github/workflows/no-torch.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Python environment
         run: |
+          pip uninstall torch --yes
           pip list
 
       - name: Build deepspeed
