output to git summary file

--- a/.github/workflows/xpu-compile.yml
+++ b/.github/workflows/xpu-compile.yml
@@ -56,5 +56,5 @@ jobs:
         cd tests/torch_compile
         export ZE_AFFINITY_MASK=0,1
         deepspeed test_compile.py --deepspeed_config ds_config.json 2>&1 | tee log.txt
-        #cat log.txt |  grep "'graph_breaks'" | sed 's/,/ /g' | awk '{print $2}' >> $GITHUB_STEP_SUMMARY
-        cat log.txt
+        # for each line start with 'dynamo_output', extract the second field and following fields and append to GITHUB_STEP_SUMMARY using awk
+        cat log.txt | awk '/^dynamo_output/ {$1=""; print $0}' >> $GITHUB_STEP_SUMMARY
