remove requirements file for flash-attn

--- a/.github/workflows/nv-flash-attn.yml
+++ b/.github/workflows/nv-flash-attn.yml
@@ -37,8 +37,11 @@ jobs:
           python -m pip install .
       - name: Install deepspeed
         run: |
-          python -m pip install .[dev,flash_attn]
+          python -m pip install .[dev]
           ds_report
+      - name: Install FlashAttention
+        run: |
+          python -m pip flash-attn
       - name: Python environment
         run: |
           python -m pip list
