Update setuptools and yapf version

--- a/.github/workflows/no-torch.yml
+++ b/.github/workflows/no-torch.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Python environment
         run: |
           pip uninstall torch --yes
+          pip install setuptools
           pip list
 
       - name: Build deepspeed
